Implementing Broker functionality

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -42,5 +42,5 @@ logging.level.ROOT=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 #kafka
-#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
