--- a/infrasturcture/docker-compose.yml
+++ b/infrasturcture/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_SERVERS: zoo1:2888:3888
 
-  kafka:
+  kafka1:
     image: confluentinc/cp-kafka:7.9.0
     hostname: kafka1
     container_name: kafka1
