Added api gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -15,6 +15,18 @@ spring:
       httpserver:
         wiretap: true
       routes:
+        - id: auth-service-route
+          uri: http://localhost:4005
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+        - id: api-docs-auth-route
+          uri: http://localhost:4005
+          predicates:
+            - Path=/api-docs/auth
+          filters:
+            - RewritePath=/api-docs/auth,/v3/api-docs
         # Route for /api/patients/** to patient-service
         - id: patient-service-route
           uri: http://localhost:4000
@@ -23,17 +35,11 @@ spring:
           filters:
             - StripPrefix=1
 
-        # Route for /api/docs/patients to patient-service /v3/api-docs
-#        - id: api-docs-patient-route
-#          uri: http://patient-service:4000
-#          predicates:
-#            - Path=/api-docs/patients
-#          filters:
-#            - RewritePath=/api-docs/patients,/v3/api-docs
+#         Route for /api/docs/patients to patient-service /v3/api-docs
+        - id: api-docs-patient-route
+          uri: http://localhost:4000
+          predicates:
+            - Path=/api-docs/patients
+          filters:
+            - RewritePath=/api-docs/patients,/v3/api-docs
 #
-#        - id: api-docs-auth-route
-#          uri: http://auth-service:4005
-#          predicates:
-#            - Path=/api-docs/auth
-#          filters:
-#            - RewritePath=/api-docs/auth,/v3/api-docs
