Created Auth Service migrations

--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=analytics-service/v1
 server.port=4002
+server.shutdown=graceful
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
