--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=billing-service/v1
 server.port=4001
 grpc.server.port=9001
+server.shutdown=graceful
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
