--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -82,6 +82,11 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- Utility Dependencies End-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
