Implementing Jwt logic

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.liquibase.enabled=true
 #logging
 logging.level.ROOT=INFO
 logging.level.org.hibernate.SQL=DEBUG
+
+security.jwt.key=6B7&z5C<+b8s:P&/Eum&dCuwAHJVpjk4cmc]W]dVfrnTY2fj'W)M\T}$j49J4rVA;SvNeR3F4<<cc5hZ)FUTz,2~Ln:R{<s]=k)+D%D\TXbKWZj_(/yJu+SYgf3T>H~)DD@6A4a}McP%k^'8`.!Y5j<sQ!U/>t'P]ru\hUMQm>g!fk3]RCb^f&bs"'.Wt*jFV:!(4/X/LDa<:t@Qh#t+YbkYdG8E+aH[jH,E,*7JR'gYz*kcYTRRc'GR]zLJ.kU}
+security.encryption.key=bN@b!]~5]2Fd3=9bLh8NaN"`$?g3];Wx
+security.encryption.algorithm=AES/ECB/PKCS5Padding
