--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -53,6 +53,11 @@
 
 		<!-- Utility Dependencies Start-->
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20250107</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.5</version>
