--- a/frontent/package.json
+++ b/frontent/package.json
@@ -17,8 +17,15 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngrx/signals": "^19.1.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
+    "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "ngx-permissions": "^19.0.0",
     "postcss": "^8.5.3",
+    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.2",
     "tslib": "^2.3.0",
