--- a/frontent/tsconfig.json
+++ b/frontent/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -16,17 +17,18 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
-  },
-  "paths": {
-    "@models/*" : ["src/app/core/models/*"],
-    "@layout/*" : ["src/app/core/layout/*"],
-    "@shared/*": ["src/app/shared/*"],
-    "@components/*": ["src/app/shared/components/*"],
-    "@directives/*": ["src/app/shared/directives/*"],
-    "@pipes/*": ["src/app/shared/pipes/*"],
-    "@core/*": ["src/app/core/*"],
-    "@i18n/*": ["src/app/i18n/*"]
+    "module": "ES2022",
+    "paths": {
+      "@models/*" : ["src/app/core/models/*"],
+      "@layout/*" : ["src/app/core/layout/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@components/*": ["src/app/shared/components/*"],
+      "@directives/*": ["src/app/shared/directives/*"],
+      "@pipes/*": ["src/app/shared/pipes/*"],
+      "@core/*": ["src/app/core/*"],
+      "@i18n/*": ["src/app/i18n/*"],
+      "@testing/*": ["testing/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
