--- a/frontent/angular.json
+++ b/frontent/angular.json
@@ -5,7 +5,12 @@
   "projects": {
     "frontent": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "inlineTemplate": true,
+          "changeDetection": "OnPush"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
