--- a/frontent/package.json
+++ b/frontent/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "ngx-permissions": "^19.0.0",
     "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.2",
