--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,6 +12,35 @@ logging:
 spring:
   cloud:
     gateway:
+#      default-filters:
+#        - DedupeResponseHeader=Access-Control-Allow-Origin, RETAIN_UNIQUE
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins:
+              - "http://localhost:4200"
+            allowedMethods:
+              - "GET"
+              - "HEAD"
+              - "PUT"
+              - "POST"
+              - "PATCH"
+              - "DELETE"
+              - "OPTIONS"
+            allowedHeaders:
+              - "Access-Control-Allow-Headers"
+              - "Access-Control-Allow-Origin"
+              - "Origin"
+              - "Accept"
+              - "X-Requested-With"
+              - "X-Api-Key"
+              - "Content-Type"
+              - "Access-Control-Request-Method"
+              - "Authorization"
+              - "Connection"
+              - "Lang-ISO"
+            allowCredentials: true
+
       httpserver:
         wiretap: true
       routes:
