Created Camel Integration

--- a/camel-integration/src/main/resources/application.properties
+++ b/camel-integration/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# application
+server.port=4000
+server.shutdown=graceful
+#server.servlet.context-path= /camel-integration/v1
 spring.application.name=camel-integration
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
+
+
