--- a/camel-integration/src/main/resources/application.properties
+++ b/camel-integration/src/main/resources/application.properties
@@ -5,5 +5,6 @@ server.servlet.context-path= /camel-integration
 spring.application.name=camel-integration
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
+spring.main.allow-bean-definition-overriding=true
 
 
