--- a/frontent/package.json
+++ b/frontent/package.json
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "cypress": "^14.5.1",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
