--- a/creaditcard-service/src/main/resources/application.properties
+++ b/creaditcard-service/src/main/resources/application.properties
@@ -1,1 +1,42 @@
 spring.application.name=creaditcard-service
+# application
+server.port=4008
+server.shutdown=graceful
+#server.servlet.context-path= /patient-service/v1
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
+
+# datasource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.poolname=Hikari
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.idleTimeout=10000
+spring.datasource.hikari.maxLifetime=30000
+spring.datasource.hikari.minimumIdle=10
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/creditcardservice
+spring.datasource.username=creditcardservice
+spring.datasource.password=creditcardservice
+
+spring.data.jpa.repositories.bootstrap-mode=deferred
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=100
+
+# liquibase
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.default-schema=public
+spring.liquibase.enabled=true
+
+#logging
+logging.level.ROOT=INFO
+logging.level.org.hibernate.SQL=DEBUG
