--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<jwt.version>0.12.6</jwt.version>
-		<querydsl.version>5.0.0</querydsl.version>
+		<querydsl.version>5.1.0</querydsl.version>
         <skip.unit.tests>true</skip.unit.tests>
         <skip.integration.tests>true</skip.integration.tests>
 	</properties>
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.5</version>
+			<version>3.0.0-M1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
