--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -4,3 +4,7 @@ grpc.server.port=9001
 server.shutdown=graceful
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
+
+spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/billingservice
+spring.datasource.username=billingservice
+spring.datasource.password=billingservice
