Created Billing service database

--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -5,6 +5,11 @@ server.shutdown=graceful
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
-spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/billingservice
-spring.datasource.username=billingservice
-spring.datasource.password=billingservice
+datasource.url=jdbc:postgresql://192.168.1.6:5432/billingservice
+datasource.username=billingservice
+datasource.password=billingservice
+
+# liquibase
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.default-schema=public
+spring.liquibase.enabled=true
