--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # application
 server.port=4000
 server.shutdown=graceful
-#server.servlet.context-path= /patient-service/v1
+#server.servlet.context-path= /patient-service
 spring.application.name=patient-service
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
