Added gzip compression

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=auth-service
 server.shutdown=graceful
 server.port=4005
 
+server.compression.enabled=true
+server.compression.mime-type=text/html,text/xml,text/plain,application/json,application/xml,text/css,text/javascript,application/javascript
+server.compression.min-response-size=1024
+
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
