--- a/creaditcard-service/pom.xml
+++ b/creaditcard-service/pom.xml
@@ -73,6 +73,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.11.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
