--- a/creaditcard-service/src/main/resources/application.properties
+++ b/creaditcard-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=creaditcard-service
+spring.application.name=payment-service
 # application
 server.port=4008
 server.shutdown=graceful
@@ -14,9 +14,9 @@ spring.datasource.hikari.idleTimeout=10000
 spring.datasource.hikari.maxLifetime=30000
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=10
-spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/creditcardservice
-spring.datasource.username=creditcardservice
-spring.datasource.password=creditcardservice
+spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/paymentservice
+spring.datasource.username=paymentservice
+spring.datasource.password=paymentservice
 
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.jpa.open-in-view=false
