Added database to paymentservice

--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -79,6 +79,10 @@
             <version>1.11.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
