--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=notification-service
+# application
+server.port=4010
+server.shutdown=graceful
+#server.servlet.context-path= /patient-service/v1
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
