--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=4000
 server.shutdown=graceful
 
+grpc.server.port=9091
+
 server.compression.enabled=true
 server.compression.mime-type=text/html,text/xml,text/plain,application/json,application/xml,text/css,text/javascript,application/javascript
 server.compression.min-response-size=1024
@@ -50,3 +52,5 @@ logging.level.org.hibernate.SQL=DEBUG
 #spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 #spring.kafka.bootstrap-servers=localhost:9092
+
+patient.processing.topic-name=patient-events
