Fixing deprecation warnings

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -52,3 +52,5 @@ security.encryption.algorithm=AES/ECB/PKCS5Padding
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.show-details=always
+
+user.processing.topic-name=user-events
