--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -54,3 +54,4 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.show-details=always
 
 user.processing.topic-name=user-events
+user.email.topic-name=user-email-events
