Adding kafka in payment service

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -40,3 +40,4 @@ spring.liquibase.enabled=true
 #logging
 logging.level.ROOT=INFO
 logging.level.org.hibernate.SQL=DEBUG
+payment.processing.topic-name=payment-events
