Implementing latest payments

--- a/stream-processor/src/main/resources/application.properties
+++ b/stream-processor/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.lifecycle.timeout-per-shutdown-phase=30s
 spring.kafka.bootstrap-servers=localhost:9092
 
 payment.processing.topic-name=payment-events
+payment.latest-month.processing.topic-name=latest-month-payments-events
