--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -55,3 +55,12 @@ management.endpoint.health.group.custom.show-details=always
 
 user.processing.topic-name=user-events
 user.email.topic-name=user-email-events
+
+
+
+cluster.enabled=true
+hazelcast.cluster.members=127.0.0.1:5701,127.0.0.1:5702
+hazelcast.cluster.name=cluster
+hazelcast.instance.name=dev
+hazelcast.instance.port=5701
+
