Adding Hazelcast configurations

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -57,7 +57,7 @@ user.processing.topic-name=user-events
 user.email.topic-name=user-email-events
 
 
-
+hazelcast.session.management.enabled=false
 cluster.enabled=true
 hazelcast.cluster.members=127.0.0.1:5701,127.0.0.1:5702
 hazelcast.cluster.name=cluster
