--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -53,10 +53,12 @@ security.encryption.algorithm=AES/ECB/PKCS5Padding
 management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.show-details=always
 
+#kafka
+spring.kafka.bootstrap-servers=localhost:9092
 user.processing.topic-name=user-events
 user.email.topic-name=user-email-events
 
-
+#hazelcast
 hazelcast.session.management.enabled=false
 cluster.enabled=true
 hazelcast.cluster.members=127.0.0.1:5701,127.0.0.1:5702
