Implementing notification service

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -57,6 +57,7 @@ management.endpoint.health.group.custom.show-details=always
 spring.kafka.bootstrap-servers=localhost:9092
 user.processing.topic-name=user-events
 user.email.topic-name=user-email-events
+notification.topic-name=notification-events
 
 #hazelcast
 hazelcast.session.management.enabled=false
