Added Activemq artemis

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -10,3 +10,10 @@ notification.topic-name=notification-events
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+
+# Artemis connection details (for the core protocol)
+spring.artemis.broker-url=tcp://127.0.0.1:61616
+spring.artemis.user=artemis
+spring.artemis.password=artemis
+artemis.stomp.relay.host=127.0.0.1
+artemis.stomp.relay.port=61613
