--- a/infrasturcture/docker-compose.yml
+++ b/infrasturcture/docker-compose.yml
@@ -120,12 +120,17 @@ services:
   activemq-artemis:
     image: apache/activemq-artemis:2.44.0
     container_name: 'activemq-artemis'
+    environment:
+      - ARTEMIS_USER=artemis
+      - ARTEMIS_PASSWORD=artemis
     ports:
       - "61616:61616"
       - "8161:8161"
+      - "61613:61613" # STOMP port
     volumes:
       - ./activemq_data:/data/activemq
       - ./activemq_log:/var/log/activemq
+      - ./data/artemis/broker.xml:/var/lib/artemis/etc/broker.xml # Mount custom broker.xml
 
 volumes:
   esdata01:
