Added Artemis  and Jms Config

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -49,8 +49,12 @@ logging.level.ROOT=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 #kafka
-#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
-#spring.kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=localhost:9092
+
+# Artemis connection details (for the core protocol)
+spring.artemis.broker-url=tcp://127.0.0.1:61616
+spring.artemis.user=artemis
+spring.artemis.password=artemis
 
 patient.processing.topic-name=patient-events
+patient.processing.queue-name=patient-queue
