Moved grpc call to camel-integration

--- a/camel-integration/src/main/resources/application.properties
+++ b/camel-integration/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.main.allow-bean-definition-overriding=true
 
 # ActiveMQ Artemis configuration
 spring.artemis.broker-url=tcp://localhost:61616
-spring.artemis.user=admin
-spring.artemis.password=admin
+spring.artemis.user=artemis
+spring.artemis.password=artemis
 
 # RabbitMQ configuration
 spring.rabbitmq.host=localhost
@@ -19,4 +19,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-
+patient.processing.queue-name=patient-queue
