Fixed bugs in hazelcast

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -74,6 +74,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
         <!-- Spring Dependencies End-->
 
 		<!-- Utility Dependencies Start-->
@@ -132,11 +136,6 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-all</artifactId>
-            <version>${hazelcast.version}</version>
         </dependency>
         <!-- Utility Dependencies End-->
 		<!-- QueryDSL Dependencies Start-->
