--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -60,7 +60,7 @@ user.email.topic-name=user-email-events
 notification.topic-name=notification-events
 
 #hazelcast
-hazelcast.session.management.enabled=false
+hazelcast.session.management.enabled=true
 cluster.enabled=true
 hazelcast.cluster.members=127.0.0.1:5701,127.0.0.1:5702
 hazelcast.cluster.name=cluster
