--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -52,9 +52,11 @@ logging.level.org.hibernate.SQL=DEBUG
 kafka.bootstrap-servers=localhost:9092
 
 # Artemis connection details (for the core protocol)
-spring.artemis.broker-url=tcp://127.0.0.1:61616
-spring.artemis.user=artemis
-spring.artemis.password=artemis
+artemis.broker.host=127.0.0.1
+artemis.broker.port=61616
+artemis.broker.user=artemis
+artemis.broker.password=artemis
+artemis.broker.message.type=pojo
 
 patient.processing.topic-name=patient-events
 patient.processing.queue-name=patient-queue
