--- a/camel-integration/src/main/resources/application.properties
+++ b/camel-integration/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.application.name=camel-integration
 spring.lifecycle.timeout-per-shutdown-phase=30s
 spring.main.allow-bean-definition-overriding=true
 
-# ActiveMQ Artemis configuration
-spring.artemis.broker-url=tcp://localhost:61616
-spring.artemis.user=artemis
-spring.artemis.password=artemis
+# Artemis connection details (for the core protocol)
+artemis.broker.host=127.0.0.1
+artemis.broker.port=61616
+artemis.broker.user=artemis
+artemis.broker.password=artemis
+artemis.broker.message.type=pojo
 
 # RabbitMQ configuration
 spring.rabbitmq.host=localhost
