Refactoring auth-service

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -168,6 +168,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <!-- Spring Dependencies End-->
         <dependency>
             <groupId>org.springframework.modulith</groupId>
             <artifactId>spring-modulith-starter-test</artifactId>
