Added batch invoice creation in payment-service

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -41,3 +41,6 @@ spring.liquibase.enabled=true
 logging.level.ROOT=INFO
 logging.level.org.hibernate.SQL=DEBUG
 payment.processing.topic-name=payment-events
+
+# batch
+spring.batch.jdbc.initialize-schema=ALWAYS
