Created batch notifications

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -46,3 +46,6 @@ spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=10
 spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.liquibase.default-schema=public
 spring.liquibase.enabled=true
+
+# batch
+spring.batch.jdbc.initialize-schema=ALWAYS
