--- a/infrasturcture/docker-compose.yml
+++ b/infrasturcture/docker-compose.yml
@@ -141,20 +141,26 @@ services:
       - "8123:8123"
       - "9001:9000"
     volumes:
-      - clickhouse_data:/var/lib/clickhouse
+      - ./clickhouse_data:/var/lib/clickhouse
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "localhost:8123/ping"]
+      test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:8123/ping"]
       interval: 10s
       timeout: 5s
       retries: 3
+      start_period: 30s
     ulimits:
       nofile:
         soft: 262144
         hard: 262144
     environment:
-      CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: "clickhouse"
-      CLICKHOUSE_DB: analyticsservice
+      - CLICKHOUSE_USER=default
+      - CLICKHOUSE_PASSWORD=clickhouse
+  # Make sure that the analytics-service depends on the clickhouse-server
+  # analytics-service:
+  #   depends_on:
+  #     clickhouse-server:
+  #       condition: service_healthy
 
 
 volumes:
